--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query-devtools": "^5.67.1",
     "@types/react-redux": "^7.1.34",
     "antd": "^5.24.1",
+    "antd-img-crop": "^4.24.0",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "fe-happyhunt-client": "file:",
